--- a/envs/qc.yaml
+++ b/envs/qc.yaml
@@ -1,125 +1,8 @@
-name: nextqc
+name: qc
 channels:
-  - conda-forge
-  - bioconda
-  - defaults
-  - r
+- bioconda
+- conda-forge
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - alsa-lib=1.2.3
-  - brotlipy=0.7.0
-  - ca-certificates=2021.1.19
-  - cairo=1.16.0
-  - certifi=2020.12.5
-  - cffi=1.14.5
-  - chardet=4.0.0
-  - click=7.1.2
-  - colorama=0.4.4
-  - coloredlogs=15.0
-  - colormath=3.0.0
-  - commonmark=0.9.1
-  - cryptography=3.4.7
-  - cycler=0.10.0
-  - decorator=4.4.2
-  - fastqc=0.11.9
-  - font-ttf-dejavu-sans-mono=2.37
-  - fontconfig=2.13.1
-  - freetype=2.10.4
-  - future=0.18.2
-  - gettext=0.21.0
-  - giflib=5.2.1
-  - graphite2=1.3.14
-  - harfbuzz=2.8.0
-  - humanfriendly=9.1
-  - icu=68.1
-  - idna=2.10
-  - importlib-metadata=3.10.0
-  - jinja2=2.11.3
-  - jpeg=9d
-  - kiwisolver=1.3.1
-  - lcms2=2.12
-  - ld_impl_linux-64=2.35.1
-  - libblas=3.9.0
-  - libcblas=3.9.0
-  - libffi=3.3
-  - libgcc-ng=9.3.0
-  - libgfortran-ng=9.3.0
-  - libgfortran4=7.5.0
-  - libgfortran5=9.3.0
-  - libglib=2.68.0
-  - libgomp=9.3.0
-  - libiconv=1.16
-  - liblapack=3.9.0
-  - libopenblas=0.3.12
-  - libpng=1.6.37
-  - libstdcxx-ng=9.3.0
-  - libtiff=4.2.0
-  - libuuid=2.32.1
-  - libwebp-base=1.2.0
-  - libxcb=1.14
-  - libxml2=2.9.10
-  - lz4-c=1.9.3
-  - lzstring=1.0.4
-  - markdown=3.3.4
-  - markupsafe=1.1.1
-  - matplotlib-base=3.4.1
-  - multiqc=1.10.1
-  - ncurses=6.2
-  - networkx=2.5.1
-  - numpy=1.20.2
-  - olefile=0.46
-  - openjdk=11.0.9.1
-  - openssl=1.1.1k
-  - pcre=8.44
-  - perl=5.32.0
-  - pillow=8.2.0
-  - pip=21.0.1
-  - pixman=0.40.0
-  - pthread-stubs=0.4
-  - pycparser=2.20
-  - pygments=2.8.1
-  - pyopenssl=20.0.1
-  - pyparsing=2.4.7
-  - pysocks=1.7.1
-  - python=3.8.6
-  - python-dateutil=2.8.1
-  - python_abi=3.8
-  - pytz=2021.1
-  - pyyaml=5.4.1
-  - readline=8.1
-  - requests=2.25.1
-  - rich=10.1.0
-  - setuptools=52.0.0
-  - simplejson=3.17.2
-  - six=1.15.0
-  - spectra=0.0.11
-  - sqlite=3.35.4
-  - tk=8.6.10
-  - tornado=6.1
-  - typing_extensions=3.7.4.3
-  - tzdata=2021a
-  - urllib3=1.26.4
-  - wheel=0.36.2
-  - xorg-fixesproto=5.0
-  - xorg-inputproto=2.3.2
-  - xorg-kbproto=1.0.7
-  - xorg-libice=1.0.10
-  - xorg-libsm=1.2.3
-  - xorg-libx11=1.6.12
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxfixes=5.0.3
-  - xorg-libxi=1.7.10
-  - xorg-libxrender=0.9.10
-  - xorg-libxtst=1.2.3
-  - xorg-recordproto=1.14.2
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
-  - xz=5.2.5
-  - yaml=0.2.5
-  - zipp=3.4.1
-  - zlib=1.2.11
-  - zstd=1.4.9
+- python>=3.8.1,<3.9
+- multiqc=1.10.1
+- fastqc=0.11.9
