--- a/envs/summary.yaml
+++ b/envs/summary.yaml
@@ -3,170 +3,110 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+  - r
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_gnu
-  - _r-mutex=1.0.1=anacondar_1
-  - binutils_impl_linux-64=2.35.1=h193b22a_2
-  - binutils_linux-64=2.35=hc3fd857_29
-  - bwidget=1.9.14=ha770c72_0
-  - bzip2=1.0.8=h7f98852_4
-  - c-ares=1.17.1=h36c2ea0_0
-  - ca-certificates=2020.12.5=ha878542_0
-  - cairo=1.16.0=h7979940_1007
-  - curl=7.71.1=he644dc0_8
-  - fontconfig=2.13.1=hba837de_1004
-  - freetype=2.10.4=h0708190_1
-  - fribidi=1.0.10=h36c2ea0_0
-  - gcc_impl_linux-64=9.3.0=h70c0ae5_18
-  - gcc_linux-64=9.3.0=h7247604_29
-  - gettext=0.19.8.1=h0b5b191_1005
-  - gfortran_impl_linux-64=9.3.0=hc4a2995_18
-  - gfortran_linux-64=9.3.0=ha1c937c_29
-  - graphite2=1.3.13=h58526e2_1001
-  - gsl=2.6=he838d99_2
-  - gxx_impl_linux-64=9.3.0=hd87eabc_18
-  - gxx_linux-64=9.3.0=h0d07fa4_29
-  - harfbuzz=2.7.4=h5cf4720_0
-  - icu=68.1=h58526e2_0
-  - jpeg=9d=h36c2ea0_0
-  - kernel-headers_linux-64=2.6.32=h77966d4_13
-  - krb5=1.17.2=h926e7f8_0
-  - ld_impl_linux-64=2.35.1=hea4e1c9_2
-  - libblas=3.9.0=7_openblas
-  - libcblas=3.9.0=7_openblas
-  - libcurl=7.71.1=hcdd3856_8
-  - libedit=3.1.20191231=he28a2e2_2
-  - libev=4.33=h516909a_1
-  - libffi=3.3=h58526e2_2
-  - libgcc-devel_linux-64=9.3.0=h7864c58_18
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=9.3.0=hff62375_18
-  - libgfortran5=9.3.0=hff62375_18
-  - libglib=2.66.4=h748fe8e_2
-  - libgomp=9.3.0=h2828fa1_18
-  - libiconv=1.16=h516909a_0
-  - liblapack=3.9.0=7_openblas
-  - libnghttp2=1.43.0=h812cca2_0
-  - libopenblas=0.3.12=pthreads_h4812303_1
-  - libpng=1.6.37=h21135ba_2
-  - libssh2=1.9.0=hab1572f_5
-  - libstdcxx-devel_linux-64=9.3.0=hb016644_18
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libtiff=4.2.0=hdc55705_0
-  - libuuid=2.32.1=h7f98852_1000
-  - libwebp-base=1.2.0=h7f98852_0
-  - libxcb=1.13=h7f98852_1003
-  - libxml2=2.9.10=h72842e0_3
-  - lz4-c=1.9.3=h9c3ff4c_0
-  - make=4.3=hd18ef5c_1
-  - ncurses=6.2=h58526e2_4
-  - openssl=1.1.1i=h7f98852_0
-  - pandoc=2.11.4=h7f98852_0
-  - pango=1.42.4=h69149e4_5
-  - pcre=8.44=he1b5a44_0
-  - pcre2=10.36=h032f7d1_1
-  - pixman=0.40.0=h36c2ea0_0
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - r-assertthat=0.2.1=r40h6115d3f_2
-  - r-backports=1.2.1=r40hcfec24a_0
-  - r-base=4.0.3=hd23ff56_6
-  - r-base64enc=0.1_3=r40hcdcec82_1004
-  - r-bookdown=0.21=r40h142f84f_0
-  - r-bslib=0.2.4=r40hc72bb7e_0
-  - r-cachem=1.0.1=r40hcfec24a_0
-  - r-class=7.3_18=r40hcfec24a_0
-  - r-classint=0.4_3=r40h580db52_2
-  - r-cli=2.3.0=r40hc72bb7e_0
-  - r-clipr=0.7.1=r40h142f84f_0
-  - r-commonmark=1.7=r40hcdcec82_1002
-  - r-cpp11=0.2.6=r40hc72bb7e_0
-  - r-crayon=1.4.0=r40hc72bb7e_0
-  - r-crosstalk=1.1.1=r40hc72bb7e_0
-  - r-digest=0.6.27=r40h1b71b39_0
-  - r-dplyr=1.0.4=r40h03ef668_0
-  - r-dt=0.17=r40hc72bb7e_0
-  - r-e1071=1.7_4=r40h1b71b39_0
-  - r-ellipsis=0.3.1=r40hcdcec82_0
-  - r-evaluate=0.14=r40h6115d3f_2
-  - r-fansi=0.4.2=r40hcfec24a_0
-  - r-fastmap=1.1.0=r40h03ef668_0
-  - r-forcats=0.5.1=r40hc72bb7e_0
-  - r-fs=1.5.0=r40h0357c0b_0
-  - r-generics=0.1.0=r40hc72bb7e_0
-  - r-glue=1.4.2=r40hcfec24a_0
-  - r-haven=2.3.1=r40hde08347_0
-  - r-highr=0.8=r40h6115d3f_2
-  - r-hms=1.0.0=r40hc72bb7e_0
-  - r-htmltools=0.5.1.1=r40h03ef668_0
-  - r-htmlwidgets=1.5.3=r40hc72bb7e_0
-  - r-httpuv=1.5.5=r40h03ef668_0
-  - r-jquerylib=0.1.3=r40hc72bb7e_0
-  - r-jsonlite=1.7.2=r40hcfec24a_0
-  - r-kernsmooth=2.23_18=r40h742201e_0
-  - r-knitr=1.31=r40hc72bb7e_0
-  - r-labelled=2.7.0=r40h6115d3f_0
-  - r-later=1.1.0.1=r40h0357c0b_0
-  - r-lazyeval=0.2.2=r40hcdcec82_2
-  - r-lifecycle=0.2.0=r40h6115d3f_1
-  - r-magrittr=2.0.1=r40hcfec24a_1
-  - r-markdown=1.1=r40hcfec24a_1
-  - r-mass=7.3_53=r40hcfec24a_0
-  - r-mime=0.9=r40hcfec24a_1
-  - r-miniui=0.1.1.1=r40h6115d3f_1002
-  - r-pillar=1.4.7=r40hc72bb7e_0
-  - r-pkgconfig=2.0.3=r40h6115d3f_1
-  - r-promises=1.1.1=r40h0357c0b_0
-  - r-purrr=0.3.4=r40hcdcec82_1
-  - r-questionr=0.7.4=r40hc72bb7e_0
-  - r-r.cache=0.14.0=r40h6115d3f_1
-  - r-r.methodss3=1.8.1=r40h6115d3f_0
-  - r-r.oo=1.24.0=r40h6115d3f_0
-  - r-r.utils=2.10.1=r40h6115d3f_0
-  - r-r6=2.5.0=r40hc72bb7e_0
-  - r-rappdirs=0.3.3=r40hcfec24a_0
-  - r-rcpp=1.0.6=r40h03ef668_0
-  - r-readr=1.4.0=r40h1b71b39_0
-  - r-rematch2=2.1.2=r40h6115d3f_1
-  - r-rlang=0.4.10=r40hcfec24a_0
-  - r-rmarkdown=2.6=r40hc72bb7e_0
-  - r-rmdformats=1.0.1=r40hc72bb7e_0
-  - r-rprojroot=2.0.2=r40hc72bb7e_0
-  - r-rstudioapi=0.13=r40hc72bb7e_0
-  - r-sass=0.3.1=r40h03ef668_0
-  - r-shiny=1.6.0=r40hc72bb7e_0
-  - r-sourcetools=0.1.7=r40he1b5a44_1002
-  - r-stringi=1.5.3=r40hcabe038_1
-  - r-stringr=1.4.0=r40h6115d3f_2
-  - r-styler=1.3.2=r40h6115d3f_1
-  - r-tibble=3.0.6=r40hcfec24a_0
-  - r-tidyr=1.1.2=r40h0357c0b_0
-  - r-tidyselect=1.1.0=r40h6115d3f_0
-  - r-tinytex=0.29=r40hc72bb7e_0
-  - r-utf8=1.1.4=r40hcdcec82_1003
-  - r-vctrs=0.3.6=r40hcfec24a_0
-  - r-withr=2.4.1=r40hc72bb7e_0
-  - r-xfun=0.20=r40hcfec24a_0
-  - r-xtable=1.8_4=r40h6115d3f_3
-  - r-yaml=2.2.1=r40hcfec24a_1
-  - r-zeallot=0.1.0=r40h6115d3f_1002
-  - readline=8.0=he28a2e2_2
-  - sed=4.8=he412f7d_0
-  - sysroot_linux-64=2.12=h77966d4_13
-  - tk=8.6.10=h21135ba_1
-  - tktable=2.10=hb7b940f_3
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.12=h516909a_0
-  - xorg-libxau=1.0.9=h7f98852_0
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-libxt=1.2.1=h7f98852_0
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h7f98852_1002
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h516909a_1010
-  - zstd=1.4.8=ha95c52a_1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - _r-mutex=1.0.1
+  - binutils_impl_linux-64=2.35.1
+  - binutils_linux-64=2.35
+  - bwidget=1.9.14
+  - bzip2=1.0.8
+  - c-ares=1.17.1
+  - ca-certificates=2020.12.5
+  - cairo=1.16.0
+  - curl=7.76.1
+  - fontconfig=2.13.1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - gcc_impl_linux-64=9.3.0
+  - gcc_linux-64=9.3.0
+  - gettext=0.19.8.1
+  - gfortran_impl_linux-64=9.3.0
+  - gfortran_linux-64=9.3.0
+  - graphite2=1.3.13
+  - gsl=2.6
+  - gxx_impl_linux-64=9.3.0
+  - gxx_linux-64=9.3.0
+  - harfbuzz=2.8.0
+  - icu=68.1
+  - jpeg=9d
+  - kernel-headers_linux-64=2.6.32
+  - krb5=1.17.2
+  - ld_impl_linux-64=2.35.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcurl=7.76.1
+  - libedit=3.1.20191231
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-devel_linux-64=9.3.0
+  - libgcc-ng=9.3.0
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
+  - libglib=2.68.1
+  - libgomp=9.3.0
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libnghttp2=1.43.0
+  - libopenblas=0.3.12
+  - libpng=1.6.37
+  - libssh2=1.9.0
+  - libstdcxx-devel_linux-64=9.3.0
+  - libstdcxx-ng=9.3.0
+  - libtiff=4.2.0
+  - libuuid=2.32.1
+  - libwebp-base=1.2.0
+  - libxcb=1.13
+  - libxml2=2.9.10
+  - lz4-c=1.9.3
+  - make=4.3
+  - ncurses=6.2
+  - openssl=1.1.1k
+  - pandoc=2.12
+  - pango=1.48.4
+  - pcre=8.44
+  - pcre2=10.36
+  - pixman=0.40.0
+  - pthread-stubs=0.4
+  - r-base=4.0.3
+  - r-base64enc=0.1_3
+  - r-bookdown=0.21
+  - r-digest=0.6.27
+  - r-evaluate=0.14
+  - r-glue=1.4.2
+  - r-highr=0.9
+  - r-htmltools=0.5.1.1
+  - r-jsonlite=1.7.2
+  - r-knitr=1.31
+  - r-magrittr=2.0.1
+  - r-markdown=1.1
+  - r-mime=0.10
+  - r-rlang=0.4.10
+  - r-rmarkdown=2.7
+  - r-rmdformats=1.0.2
+  - r-stringi=1.5.3
+  - r-stringr=1.4.0
+  - r-tinytex=0.31
+  - r-xfun=0.20
+  - r-yaml=2.2.1
+  - readline=8.1
+  - sed=4.8
+  - sysroot_linux-64=2.12
+  - tk=8.6.10
+  - tktable=2.10
+  - xorg-kbproto=1.0.7
+  - xorg-libice=1.0.10
+  - xorg-libsm=1.2.3
+  - xorg-libx11=1.7.0
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.2.5
+  - zlib=1.2.11
+  - zstd=1.4.9
