--- a/envs/scribo.yaml
+++ b/envs/scribo.yaml
@@ -1,4 +1,4 @@
-name: scribo 
+name: scribo
 channels:
   - conda-forge
   - bioconda
@@ -7,26 +7,34 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - bamtools=2.5.1
   - bzip2=1.0.8
   - c-ares=1.17.1
   - ca-certificates=2021.5.30
   - certifi=2021.5.30
+  - gsl=2.4
   - htslib=1.12
   - krb5=1.19.1
   - ld_impl_linux-64=2.35.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
   - libcurl=7.77.0
   - libdeflate=1.7
   - libedit=3.1.20210216
   - libev=4.33
   - libffi=3.3
   - libgcc-ng=9.3.0
+  - libgfortran-ng=9.3.0
+  - libgfortran5=9.3.0
   - libgomp=9.3.0
   - libnghttp2=1.43.0
+  - libopenblas=0.3.15
   - libssh2=1.9.0
   - libstdcxx-ng=9.3.0
   - ncurses=6.2
   - openssl=1.1.1k
   - pip=21.1.2
+  - piranha=1.2.1
   - pyfaidx=0.5.9.5
   - pysam=0.16.0.1
   - python=3.9.5
@@ -41,4 +49,3 @@ dependencies:
   - wheel=0.36.2
   - xz=5.2.5
   - zlib=1.2.11
-
