--- a/envs/salmon.yaml
+++ b/envs/salmon.yaml
@@ -7,12 +7,16 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - boost-cpp=1.74.0
   - bzip2=1.0.8
-  - icu=64.2
+  - icu=68.1
   - jemalloc=5.2.1
   - libgcc-ng=9.3.0
   - libgomp=9.3.0
   - libstdcxx-ng=9.3.0
-  - salmon=1.3.0
-  - tbb=2020.1
+  - lz4-c=1.9.3
+  - salmon=1.5.1
+  - tbb=2020.3
+  - xz=5.2.5
   - zlib=1.2.11
+  - zstd=1.5.0
