--- a/envs/nextsnakes.yaml
+++ b/envs/nextsnakes.yaml
@@ -1,16 +1,16 @@
-name: NextSnakes
+name: nextsnakes
 channels:
-- conda-forge
 - bioconda
+- conda-forge
 dependencies:
-- pthread-stubs=0.4
+- snakemake=6.5.3
 - libcroco=0.6.13
-- snakemake=6.1.1
-- natsort=7.1.1
-- xorg-libxdmcp=1.1.3
-- mpich=3.4.1
 - biopython=1.78
-- crc32c=2.2
-- nextflow=20.10.0
+- pthread-stubs=0.4
+- xorg-libxdmcp=1.1.3
+- natsort=7.1.1
 - grep=3.4
+- mpich=3.4.1
 - sphinx_rtd_theme=0.5.2
+- crc32c=2.2
+- nextflow=21.04.0
