--- a/envs/deseq2_DE.yaml
+++ b/envs/deseq2_DE.yaml
@@ -1,100 +1,123 @@
-name: deseq2_DE
+name: deseq2
 channels:
-  - bioconda
   - conda-forge
+  - bioconda
   - defaults
+  - r
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - _r-mutex=1.0.1
-  - binutils_impl_linux-64=2.31.1
-  - binutils_linux-64=2.31.1
-  - bioconductor-annotate=1.68.0
-  - bioconductor-annotationdbi=1.52.0
-  - bioconductor-apeglm=1.12.0
-  - bioconductor-aroma.light=3.20.0
-  - bioconductor-biobase=2.50.0
-  - bioconductor-biocfilecache=1.14.0
-  - bioconductor-biocgenerics=0.36.0
-  - bioconductor-biocparallel=1.24.0
-  - bioconductor-biomart=2.46.0
-  - bioconductor-biostrings=2.58.0
-  - bioconductor-delayedarray=0.16.0
-  - bioconductor-deseq2=1.30.0
-  - bioconductor-edaseq=2.24.0
-  - bioconductor-edger=3.32.0
-  - bioconductor-genefilter=1.72.0
-  - bioconductor-geneplotter=1.68.0
-  - bioconductor-genomeinfodb=1.26.0
-  - bioconductor-genomeinfodbdata=1.2.3
-  - bioconductor-genomicalignments=1.26.0
-  - bioconductor-genomicfeatures=1.42.0
-  - bioconductor-genomicranges=1.42.0
-  - bioconductor-iranges=2.24.0
-  - bioconductor-limma=3.46.0
-  - bioconductor-matrixgenerics=1.2.0
-  - bioconductor-rhtslib=1.22.0
-  - bioconductor-rsamtools=2.6.0
-  - bioconductor-rtracklayer=1.50.0
-  - bioconductor-ruvseq=1.24.0
-  - bioconductor-s4vectors=0.28.0
-  - bioconductor-shortread=1.48.0
-  - bioconductor-summarizedexperiment=1.20.0
-  - bioconductor-xvector=0.30.0
-  - bioconductor-zlibbioc=1.36.0
+  - _sysroot_linux-64_curr_repodata_hack=3
+  - binutils_impl_linux-64=2.36.1
+  - binutils_linux-64=2.36
+  - bioconductor-annotate=1.70.0
+  - bioconductor-annotationdbi=1.54.0
+  - bioconductor-apeglm=1.14.0
+  - bioconductor-aroma.light=3.22.0
+  - bioconductor-biobase=2.52.0
+  - bioconductor-biocfilecache=2.0.0
+  - bioconductor-biocgenerics=0.38.0
+  - bioconductor-biocio=1.2.0
+  - bioconductor-biocparallel=1.26.0
+  - bioconductor-biomart=2.48.0
+  - bioconductor-biostrings=2.60.0
+  - bioconductor-delayedarray=0.18.0
+  - bioconductor-deseq2=1.32.0
+  - bioconductor-edaseq=2.26.0
+  - bioconductor-edger=3.34.0
+  - bioconductor-genefilter=1.74.0
+  - bioconductor-geneplotter=1.70.0
+  - bioconductor-genomeinfodb=1.28.0
+  - bioconductor-genomeinfodbdata=1.2.6
+  - bioconductor-genomicalignments=1.28.0
+  - bioconductor-genomicfeatures=1.44.0
+  - bioconductor-genomicranges=1.44.0
+  - bioconductor-iranges=2.26.0
+  - bioconductor-keggrest=1.32.0
+  - bioconductor-limma=3.48.0
+  - bioconductor-matrixgenerics=1.4.0
+  - bioconductor-rhtslib=1.24.0
+  - bioconductor-rsamtools=2.8.0
+  - bioconductor-rtracklayer=1.52.0
+  - bioconductor-ruvseq=1.26.0
+  - bioconductor-s4vectors=0.30.0
+  - bioconductor-shortread=1.50.0
+  - bioconductor-summarizedexperiment=1.22.0
+  - bioconductor-xvector=0.32.0
+  - bioconductor-zlibbioc=1.38.0
   - bwidget=1.9.13
   - bzip2=1.0.8
-  - ca-certificates=2021.1.19
+  - c-ares=1.17.1
+  - ca-certificates=2021.7.5
   - cairo=1.16.0
-  - certifi=2020.12.5
-  - curl=7.69.1
+  - certifi=2021.5.30
+  - curl=7.77.0
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
-  - freetype=2.10.0
-  - fribidi=1.0.5
-  - gcc_impl_linux-64=7.3.0
-  - gcc_linux-64=7.3.0
-  - gettext=0.19.8.1
-  - gfortran_impl_linux-64=7.3.0
-  - gfortran_linux-64=7.3.0
-  - glib=2.58.3
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - freetype=2.10.4
+  - fribidi=1.0.10
+  - gcc_impl_linux-64=9.3.0
+  - gcc_linux-64=9.3.0
+  - gettext=0.21.0
+  - gfortran_impl_linux-64=9.3.0
+  - gfortran_linux-64=9.3.0
+  - glib=2.68.3
+  - glib-tools=2.68.3
   - graphite2=1.3.13
   - gsl=2.6
-  - gxx_impl_linux-64=7.3.0
-  - gxx_linux-64=7.3.0
-  - harfbuzz=2.4.0
-  - icu=64.2
-  - jpeg=9c
-  - krb5=1.17.2
-  - ld_impl_linux-64=2.34
-  - libblas=3.8.0
-  - libcblas=3.8.0
-  - libcurl=7.69.1
+  - gxx_impl_linux-64=9.3.0
+  - gxx_linux-64=9.3.0
+  - harfbuzz=2.8.2
+  - icu=68.1
+  - jbig=2.1
+  - jpeg=9d
+  - kernel-headers_linux-64=3.10.0
+  - krb5=1.19.1
+  - ld_impl_linux-64=2.36.1
+  - lerc=2.2.1
+  - libblas=3.9.0
+  - libcblas=3.9.0
+  - libcurl=7.77.0
+  - libdeflate=1.7
   - libedit=3.1.20210216
-  - libffi=3.2.1
+  - libev=4.33
+  - libffi=3.3
+  - libgcc-devel_linux-64=9.3.0
   - libgcc-ng=9.3.0
-  - libgfortran-ng=7.5.0
+  - libgfortran-ng=9.4.0
   - libgfortran4=7.5.0
+  - libgfortran5=9.4.0
+  - libglib=2.68.3
   - libgomp=9.3.0
-  - libiconv=1.15
-  - liblapack=3.8.0
-  - libopenblas=0.3.7
+  - libiconv=1.16
+  - liblapack=3.9.0
+  - libnghttp2=1.43.0
+  - libopenblas=0.3.15
   - libpng=1.6.37
-  - libssh2=1.8.2
+  - libssh2=1.9.0
+  - libstdcxx-devel_linux-64=9.3.0
   - libstdcxx-ng=9.3.0
-  - libtiff=4.1.0
+  - libtiff=4.3.0
   - libuuid=2.32.1
+  - libwebp-base=1.2.0
   - libxcb=1.13
-  - libxml2=2.9.10
-  - lz4-c=1.8.3
+  - libxml2=2.9.12
+  - lz4-c=1.9.3
   - make=4.2.1
   - ncurses=6.2
-  - openssl=1.1.1j
-  - pango=1.42.4
-  - pcre=8.43
-  - pcre2=10.34
+  - openssl=1.1.1k
+  - pango=1.48.7
+  - pcre=8.45
+  - pcre2=10.37
   - pigz=2.3.4
   - pip=21.0.1
-  - pixman=0.38.0
+  - pixman=0.40.0
   - pthread-stubs=0.4
   - python=3.8.6
   - python_abi=3.8
@@ -102,91 +125,99 @@ dependencies:
   - r-askpass=1.1
   - r-assertthat=0.2.1
   - r-backports=1.2.1
-  - r-base=4.0.0
+  - r-base=4.1.0
   - r-base64enc=0.1_3
+  - r-bbmle=1.0.23.1
+  - r-bdsmatrix=1.3_4
   - r-bh=1.75.0_0
-  - r-biocmanager=1.30.10
+  - r-biocmanager=1.30.16
   - r-bit=4.0.4
   - r-bit64=4.0.5
-  - r-bitops=1.0_6
-  - r-blob=1.2.1
-  - r-brio=1.1.1
-  - r-cachem=1.0.4
-  - r-callr=3.5.1
-  - r-catools=1.18.1
+  - r-bitops=1.0_7
+  - r-blob=1.2.2
+  - r-brio=1.1.2
+  - r-cachem=1.0.5
+  - r-callr=3.7.0
+  - r-catools=1.18.2
   - r-checkmate=2.0.0
-  - r-cli=2.3.1
-  - r-cluster=2.1.0
-  - r-colorspace=2.0_0
+  - r-cli=3.0.1
+  - r-cluster=2.1.2
+  - r-coda=0.19_4
+  - r-colorspace=2.0_2
   - r-crayon=1.4.1
-  - r-curl=4.3
+  - r-curl=4.3.2
   - r-data.table=1.14.0
   - r-dbi=1.1.1
-  - r-dbplyr=2.1.0
+  - r-dbplyr=2.1.1
   - r-desc=1.3.0
-  - r-diffobj=0.3.3
+  - r-diffobj=0.3.4
   - r-digest=0.6.27
-  - r-dplyr=1.0.5
-  - r-ellipsis=0.3.1
+  - r-dplyr=1.0.7
+  - r-ellipsis=0.3.2
+  - r-emdbook=1.3.12
   - r-evaluate=0.14
   - r-fansi=0.4.2
   - r-farver=2.1.0
   - r-fastmap=1.1.0
+  - r-filelock=1.0.2
   - r-foreign=0.8_81
-  - r-formatr=1.8
+  - r-formatr=1.11
   - r-formula=1.2_4
   - r-futile.logger=1.4.3
   - r-futile.options=1.0.1
   - r-gdata=2.18.0
   - r-generics=0.1.0
-  - r-ggplot2=3.3.3
+  - r-ggplot2=3.3.5
+  - r-ggrepel=0.9.1
   - r-glue=1.4.2
   - r-gplots=3.1.1
   - r-gridextra=2.3
   - r-gtable=0.3.0
-  - r-gtools=3.8.2
-  - r-highr=0.8
-  - r-hmisc=4.4_1
-  - r-hms=1.0.0
-  - r-htmltable=2.1.0
+  - r-gtools=3.9.2
+  - r-highr=0.9
+  - r-hmisc=4.5_0
+  - r-hms=1.1.0
+  - r-htmltable=2.2.1
   - r-htmltools=0.5.1.1
   - r-htmlwidgets=1.5.3
   - r-httr=1.4.2
   - r-hwriter=1.3.2
-  - r-isoband=0.2.4
+  - r-isoband=0.2.5
   - r-jpeg=0.1_8.1
   - r-jsonlite=1.7.2
-  - r-kernsmooth=2.23_18
-  - r-knitr=1.31
+  - r-kernsmooth=2.23_20
+  - r-knitr=1.33
   - r-labeling=0.4.2
   - r-lambda.r=1.2.4
-  - r-lattice=0.20_41
+  - r-lattice=0.20_44
   - r-latticeextra=0.6_29
   - r-lazyeval=0.2.2
   - r-lifecycle=1.0.0
   - r-locfit=1.5_9.4
   - r-magrittr=2.0.1
   - r-markdown=1.1
-  - r-mass=7.3_53.1
-  - r-matrix=1.3_2
-  - r-matrixstats=0.58.0
+  - r-mass=7.3_54
+  - r-matrix=1.3_4
+  - r-matrixstats=0.60.0
   - r-memoise=2.0.0
-  - r-mgcv=1.8_34
-  - r-mime=0.10
+  - r-mgcv=1.8_36
+  - r-mime=0.11
   - r-munsell=0.5.0
-  - r-nlme=3.1_150
-  - r-nnet=7.3_15
-  - r-openssl=1.4.3
-  - r-pillar=1.5.1
+  - r-mvtnorm=1.1_2
+  - r-nlme=3.1_152
+  - r-nnet=7.3_16
+  - r-numderiv=2016.8_1.1
+  - r-openssl=1.4.4
+  - r-pillar=1.6.1
   - r-pkgbuild=1.2.0
   - r-pkgconfig=2.0.3
-  - r-pkgload=1.2.0
+  - r-pkgload=1.2.1
   - r-plogr=0.2.0
   - r-plyr=1.8.6
   - r-png=0.1_7
   - r-praise=1.0.0
   - r-prettyunits=1.1.1
-  - r-processx=3.4.5
+  - r-processx=3.5.2
   - r-progress=1.2.2
   - r-ps=1.6.0
   - r-purrr=0.3.4
@@ -196,41 +227,46 @@ dependencies:
   - r-r6=2.5.0
   - r-rappdirs=0.3.3
   - r-rcolorbrewer=1.1_2
-  - r-rcpp=1.0.6
-  - r-rcpparmadillo=0.10.2.2.0
-  - r-rcurl=1.98_1.2
+  - r-rcpp=1.0.7
+  - r-rcpparmadillo=0.10.6.0.0
+  - r-rcppeigen=0.3.3.9.1
+  - r-rcppnumerical=0.4_0
+  - r-rcurl=1.98_1.3
   - r-rematch2=2.1.2
   - r-reshape2=1.4.4
-  - r-rlang=0.4.10
+  - r-restfulr=0.0.13
+  - r-rjson=0.2.20
+  - r-rlang=0.4.11
   - r-rpart=4.1_15
   - r-rprojroot=2.0.2
-  - r-rsqlite=2.2.4
+  - r-rsqlite=2.2.5
   - r-rstudioapi=0.13
   - r-scales=1.1.1
   - r-snow=0.4_3
-  - r-stringi=1.4.6
+  - r-stringi=1.7.3
   - r-stringr=1.4.0
-  - r-survival=3.2_10
+  - r-survival=3.2_11
   - r-sys=3.4
-  - r-testthat=3.0.2
-  - r-tibble=3.1.0
-  - r-tidyselect=1.1.0
-  - r-utf8=1.2.1
-  - r-vctrs=0.3.6
-  - r-viridis=0.5.1
-  - r-viridislite=0.3.0
+  - r-testthat=3.0.4
+  - r-tibble=3.1.3
+  - r-tidyselect=1.1.1
+  - r-utf8=1.2.2
+  - r-vctrs=0.3.8
+  - r-viridis=0.6.1
+  - r-viridislite=0.4.0
   - r-waldo=0.2.5
-  - r-withr=2.4.1
-  - r-xfun=0.20
+  - r-withr=2.4.2
+  - r-xfun=0.24
   - r-xml=3.99_0.6
   - r-xml2=1.3.2
   - r-xtable=1.8_4
   - r-yaml=2.2.1
   - r-zeallot=0.1.0
-  - readline=8.0
+  - readline=8.1
   - sed=4.7
   - setuptools=52.0.0
   - sqlite=3.35.2
+  - sysroot_linux-64=2.17
   - tk=8.6.10
   - tktable=2.10
   - wheel=0.36.2
@@ -246,6 +282,7 @@ dependencies:
   - xorg-libxfixes=5.0.3
   - xorg-libxi=1.7.10
   - xorg-libxrender=0.9.10
+  - xorg-libxt=1.2.1
   - xorg-libxtst=1.2.3
   - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
@@ -253,4 +290,4 @@ dependencies:
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - zlib=1.2.11
-  - zstd=1.4.3
+  - zstd=1.5.0
