--- a/envs/nextsnakes.yaml
+++ b/envs/nextsnakes.yaml
@@ -8,54 +8,63 @@ dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
   - aioeasywebdav=2.4.0
-  - aiohttp=3.7.4
+  - aiohttp=3.7.4.post0
   - alabaster=0.7.12
+  - alsa-lib=1.2.3
   - amply=0.1.4
   - appdirs=1.4.4
   - async-timeout=3.0.1
   - atk-1.0=2.36.0
   - attmap=0.13.0
-  - attrs=20.3.0
+  - attrs=21.2.0
   - azure-common=1.1.27
-  - azure-core=1.12.0
-  - azure-storage-blob=12.8.0
-  - babel=2.9.0
+  - azure-core=1.14.0
+  - azure-storage-blob=12.8.1
+  - babel=2.9.1
   - backports=1.0
-  - backports.functools_lru_cache=1.6.3
+  - backports.functools_lru_cache=1.6.4
   - bcrypt=3.2.0
-  - biopython=1.78
+  - biopython=1.79
+  - black=21.5b2
+  - bleach=3.3.0
   - blinker=1.4
   - boto=2.49.0
-  - boto3=1.17.48
-  - botocore=1.20.48
+  - boto3=1.17.112
+  - botocore=1.20.112
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.17.1
   - ca-certificates=2021.7.5
-  - cachetools=4.2.1
+  - cachetools=4.2.2
   - cairo=1.16.0
   - certifi=2021.5.30
-  - cffi=1.14.5
+  - cffi=1.14.6
   - chardet=4.0.0
+  - click=8.0.1
+  - cmarkgfm=0.6.0
   - coincbc=2.10.5
   - colorama=0.4.4
-  - configargparse=1.4
+  - configargparse=1.5.1
   - connection_pool=0.0.3
   - coreutils=8.32
-  - crc32c=2.2
+  - crc32c=2.2.post0
   - cryptography=3.4.7
   - curl=7.77.0
+  - cycler=0.10.0
+  - dataclasses=0.8
   - datrie=0.8.2
-  - decorator=4.4.2
-  - docutils=0.16
-  - dropbox=10.10.0
-  - expat=2.3.0
+  - dbus=1.13.18
+  - decorator=5.0.9
+  - docutils=0.17.1
+  - dropbox=11.13.3
+  - expat=2.4.1
   - fftw=3.3.9
   - filechunkio=1.8
   - filelock=3.0.12
+  - flake8=3.9.2
   - font-ttf-dejavu-sans-mono=2.37
-  - font-ttf-inconsolata=2.001
-  - font-ttf-source-code-pro=2.030
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
   - font-ttf-ubuntu=0.83
   - fontconfig=2.13.1
   - fonts-conda-ecosystem=1
@@ -63,186 +72,248 @@ dependencies:
   - freetype=2.10.4
   - fribidi=1.0.10
   - ftputil=5.0.1
-  - gdk-pixbuf=2.42.4
+  - gdk-pixbuf=2.42.6
   - gettext=0.21.0
-  - ghostscript=9.53.3
+  - ghostscript=9.54.0
   - giflib=5.2.1
   - gitdb=4.0.7
-  - gitpython=3.1.14
-  - google-api-core=1.26.2
-  - google-api-python-client=2.1.0
-  - google-auth=1.28.0
+  - gitpython=3.1.18
+  - glib=2.68.3
+  - glib-tools=2.68.3
+  - google-api-core=1.31.0
+  - google-api-python-client=2.13.0
+  - google-auth=1.32.1
   - google-auth-httplib2=0.1.0
-  - google-cloud-core=1.6.0
-  - google-cloud-storage=1.37.1
+  - google-cloud-core=1.7.1
+  - google-cloud-storage=1.41.0
   - google-crc32c=1.1.2
-  - google-resumable-media=1.2.0
+  - google-resumable-media=1.3.1
   - googleapis-common-protos=1.53.0
   - graphite2=1.3.14
-  - graphviz=2.47.0
+  - graphviz=2.47.3
   - grep=3.4
+  - grpcio=1.38.1
+  - gst-plugins-base=1.18.4
+  - gstreamer=1.18.4
   - gtk2=2.24.33
   - gts=0.7.6
-  - harfbuzz=2.8.0
+  - harfbuzz=2.8.2
   - httplib2=0.19.1
   - icu=68.1
   - idna=2.10
-  - imagemagick=7.0.11_6
+  - imagemagick=7.1.0_2
   - imagesize=1.2.0
-  - importlib-metadata=3.10.0
+  - importlib-metadata=4.6.1
+  - importlib_metadata=4.6.1
   - iniconfig=1.1.1
   - ipython_genutils=0.2.0
   - isodate=0.6.0
+  - isort=5.9.2
   - jbig=2.1
-  - jinja2=2.11.3
+  - jeepney=0.7.0
+  - jinja2=3.0.1
   - jmespath=0.10.0
   - jpeg=9d
   - jsonschema=3.2.0
   - jupyter_core=4.7.1
+  - keyring=23.0.1
+  - kiwisolver=1.3.1
   - krb5=1.19.1
-  - ld_impl_linux-64=2.35.1
+  - lcms2=2.12
+  - ld_impl_linux-64=2.36.1
+  - lerc=2.2.1
   - libblas=3.9.0
   - libcblas=3.9.0
+  - libclang=11.1.0
   - libcrc32c=1.1.1
   - libcroco=0.6.13
   - libcurl=7.77.0
+  - libdeflate=1.7
   - libedit=3.1.20210216
   - libev=4.33
+  - libevent=2.1.10
   - libffi=3.3
   - libgcc-ng=9.3.0
   - libgd=2.3.2
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
-  - libglib=2.68.0
+  - libglib=2.68.3
   - libgomp=9.3.0
   - libiconv=1.16
   - liblapack=3.9.0
+  - libllvm11=11.1.0
   - libnghttp2=1.43.0
-  - libopenblas=0.3.12
+  - libogg=1.3.5
+  - libopenblas=0.3.15
+  - libopus=1.3.1
   - libpng=1.6.37
-  - libprotobuf=3.15.7
-  - librsvg=2.50.3
+  - libpq=13.3
+  - libprotobuf=3.17.2
+  - librsvg=2.50.7
   - libsodium=1.0.18
   - libssh2=1.9.0
   - libstdcxx-ng=9.3.0
-  - libtiff=4.2.0
+  - libtiff=4.3.0
   - libtool=2.4.6
   - libuuid=2.32.1
+  - libvorbis=1.3.7
   - libwebp=1.2.0
   - libwebp-base=1.2.0
   - libxcb=1.14
-  - libxml2=2.9.10
+  - libxkbcommon=1.0.3
+  - libxml2=2.9.12
   - logmuse=0.2.6
   - lz4-c=1.9.3
-  - markupsafe=1.1.1
-  - more-itertools=8.7.0
+  - markupsafe=2.0.1
+  - matplotlib=3.4.2
+  - matplotlib-base=3.4.2
+  - mccabe=0.6.1
+  - more-itertools=8.8.0
   - mpi=1.0
-  - mpich=3.4.1
+  - mpich=3.4.2
   - msrest=0.6.21
   - multidict=5.1.0
+  - mypy_extensions=0.4.3
+  - mysql-common=8.0.25
+  - mysql-libs=8.0.25
   - natsort=7.1.1
   - nbformat=5.1.3
   - ncurses=6.2
-  - networkx=2.5.1
+  - networkx=2.6.1
   - nextflow=21.04.0
-  - numpy=1.20.2
+  - nspr=4.30
+  - nss=3.67
+  - numpy=1.21.0
   - oauth2client=4.1.3
-  - oauthlib=3.1.0
-  - openjdk=10.0.2
+  - oauthlib=3.1.1
+  - olefile=0.46
+  - openjdk=11.0.9.1
   - openjpeg=2.4.0
   - openssl=1.1.1k
-  - packaging=20.9
-  - pandas=1.2.3
-  - pango=1.42.4
+  - packaging=21.0
+  - pandas=1.3.0
+  - pango=1.48.7
   - paramiko=2.7.2
-  - pcre=8.44
-  - peppy=0.31.0
-  - perl=5.32.0
-  - pip=21.0.1
+  - pathspec=0.8.1
+  - pcre=8.45
+  - peppy=0.31.1
+  - perl=5.32.1
+  - pillow=8.3.1
+  - pip=21.1.3
   - pixman=0.40.0
   - pkg-config=0.29.2
+  - pkginfo=1.7.1
   - pluggy=0.13.1
+  - ply=3.11
   - prettytable=2.1.0
-  - protobuf=3.15.7
+  - protobuf=3.17.2
   - psutil=5.8.0
   - pthread-stubs=0.4
   - pulp=2.4
   - py=1.10.0
   - pyasn1=0.4.8
   - pyasn1-modules=0.2.8
+  - pycodestyle=2.7.0
   - pycparser=2.20
-  - pygments=2.8.1
+  - pyflakes=2.3.1
+  - pygments=2.9.0
   - pygraphviz=1.7
-  - pyjwt=2.0.1
+  - pyjwt=2.1.0
   - pynacl=1.4.0
   - pyopenssl=20.0.1
   - pyparsing=2.4.7
-  - pyrsistent=0.17.3
+  - pyqt=5.12.3
+  - pyqt-impl=5.12.3
+  - pyqt5-sip=4.19.18
+  - pyqtchart=5.12
+  - pyqtwebengine=5.12.1
+  - pyrsistent=0.18.0
   - pysftp=0.2.9
   - pysocks=1.7.1
-  - pytest=6.2.3
+  - pytest=6.2.4
   - python=3.9.2
-  - python-dateutil=2.8.1
-  - python-irodsclient=0.8.6
+  - python-dateutil=2.8.2
+  - python-irodsclient=1.0.0
   - python_abi=3.9
   - pytz=2021.1
+  - pyu2f=0.1.5
   - pyyaml=5.4.1
+  - qt=5.12.9
   - ratelimiter=1.2.0
   - readline=8.1
+  - readme_renderer=27.0
+  - regex=2021.7.6
   - requests=2.25.1
   - requests-oauthlib=1.3.0
+  - requests-toolbelt=0.9.1
+  - rfc3986=1.5.0
   - rsa=4.7.2
-  - s3transfer=0.3.6
+  - s3transfer=0.4.2
+  - scipy=1.7.0
+  - secretstorage=3.3.1
   - setuptools=52.0.0
-  - simplejson=3.17.2
-  - six=1.15.0
+  - simplejson=3.17.3
+  - six=1.16.0
   - slacker=0.14.0
-  - smart_open=5.0.0
+  - smart_open=5.1.0
   - smmap=3.0.5
   - snakemake=6.5.3
   - snakemake-minimal=6.5.3
   - snowballstemmer=2.1.0
-  - sphinx=3.5.3
+  - sphinx=4.1.1
   - sphinx_rtd_theme=0.5.2
   - sphinxcontrib-applehelp=1.0.2
   - sphinxcontrib-devhelp=1.0.2
-  - sphinxcontrib-htmlhelp=1.0.3
+  - sphinxcontrib-htmlhelp=2.0.0
   - sphinxcontrib-jsmath=1.0.1
   - sphinxcontrib-qthelp=1.0.3
-  - sphinxcontrib-serializinghtml=1.1.4
-  - sqlite=3.35.4
+  - sphinxcontrib-serializinghtml=1.1.5
+  - sqlite=3.36.0
+  - stone=3.2.1
   - stopit=1.1.2
   - tabulate=0.8.9
   - tk=8.6.10
   - toml=0.10.2
   - toposort=1.6
+  - tornado=6.1
+  - tqdm=4.61.2
   - traitlets=5.0.5
-  - typing-extensions=3.7.4.3
-  - typing_extensions=3.7.4.3
+  - twine=3.4.1
+  - typed-ast=1.4.3
+  - typing-extensions=3.10.0.0
+  - typing_extensions=3.10.0.0
   - tzdata=2021a
   - ubiquerg=0.6.1
   - uritemplate=3.0.1
-  - urllib3=1.26.4
+  - urllib3=1.26.6
   - veracitools=0.1.3
   - wcwidth=0.2.5
+  - webencodings=0.5.1
   - wheel=0.36.2
   - wrapt=1.12.1
   - xmlrunner=1.7.7
+  - xorg-fixesproto=5.0
+  - xorg-inputproto=2.3.2
   - xorg-kbproto=1.0.7
   - xorg-libice=1.0.10
   - xorg-libsm=1.2.3
-  - xorg-libx11=1.7.0
+  - xorg-libx11=1.7.2
   - xorg-libxau=1.0.9
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxi=1.7.10
   - xorg-libxrender=0.9.10
   - xorg-libxt=1.2.1
+  - xorg-libxtst=1.2.3
+  - xorg-recordproto=1.14.2
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xz=5.2.5
   - yaml=0.2.5
   - yarl=1.5.1
-  - zipp=3.4.1
+  - zipp=3.5.0
   - zlib=1.2.11
-  - zstd=1.4.9
+  - zstd=1.5.0
+prefix: /home/fall/anaconda3/envs/nextsnakes
