--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ VCS = git
 style = pep440
 versionfile_source = NextSnakes/_version.py
 versionfile_build = NextSnakes/_version.py
-tag_prefix =
+tag_prefix = v
 parentdir_prefix = NextSnakes-
 
 [report]
