--- a/envs/nextsnakes.yaml
+++ b/envs/nextsnakes.yaml
@@ -1,4 +1,4 @@
-name: nextsnakes
+name: NextSnakes
 channels:
   - conda-forge
   - bioconda
@@ -34,10 +34,10 @@ dependencies:
   - brotlipy=0.7.0
   - bzip2=1.0.8
   - c-ares=1.17.1
-  - ca-certificates=2021.7.5
+  - ca-certificates=2021.10.8
   - cachetools=4.2.2
   - cairo=1.16.0
-  - certifi=2021.5.30
+  - certifi=2021.10.8
   - cffi=1.14.6
   - chardet=4.0.0
   - click=8.0.1
@@ -133,12 +133,12 @@ dependencies:
   - libev=4.33
   - libevent=2.1.10
   - libffi=3.3
-  - libgcc-ng=9.3.0
+  - libgcc-ng=11.2.0
   - libgd=2.3.2
   - libgfortran-ng=9.3.0
   - libgfortran5=9.3.0
   - libglib=2.68.3
-  - libgomp=9.3.0
+  - libgomp=11.2.0
   - libiconv=1.16
   - liblapack=3.9.0
   - libllvm11=11.1.0
@@ -162,6 +162,7 @@ dependencies:
   - libxcb=1.14
   - libxkbcommon=1.0.3
   - libxml2=2.9.12
+  - libzlib=1.2.11
   - logmuse=0.2.6
   - lz4-c=1.9.3
   - markupsafe=2.0.1
@@ -189,7 +190,7 @@ dependencies:
   - olefile=0.46
   - openjdk=11.0.9.1
   - openjpeg=2.4.0
-  - openssl=1.1.1k
+  - openssl=1.1.1l
   - packaging=21.0
   - pandas=1.3.0
   - pango=1.48.7
@@ -287,6 +288,7 @@ dependencies:
   - uritemplate=3.0.1
   - urllib3=1.26.6
   - veracitools=0.1.3
+  - versioneer=0.20
   - wcwidth=0.2.5
   - webencodings=0.5.1
   - wheel=0.36.2
