--- a/envs/trimgalore.yaml
+++ b/envs/trimgalore.yaml
@@ -31,6 +31,7 @@ dependencies:
   - pip=19.0.3
   - python=3.7.1
   - readline=7.0
+  - rename=1.601
   - setuptools=40.8.0
   - sqlite=3.26.0
   - tk=8.6.9
